# hermes-plugin

./: .gitignore  README.md  __init__.py  cli.py  plugin.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: AGENT_MEMORY.md  PERSONA_BOOTSTRAP.md
maindex_hermes_plugin/: __init__.py  setup.py
skills/maindex-core/: SKILL.md
skills/memory-organizer/: SKILL.md
tests/: conftest.py  test_client.py  test_provider.py  test_setup.py
