[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maindex-hermes-plugin"
version = "1.3.1"
description = "Maindex structured memory graph for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Maindex", email = "plugins@maindex.io" },
]
keywords = ["hermes", "hermes-agent", "memory", "maindex", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://maindex.io"
Documentation = "https://expert.maindex.io/docs"
Repository = "https://github.com/maindexapp/hermes-plugin"
Issues = "https://github.com/maindexapp/hermes-plugin/issues"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[project.entry-points."hermes_agent.plugins"]
maindex = "maindex_hermes_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["maindex_hermes_plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
